# Rust_controller

./: Cargo.toml  README.md  pyproject.toml  test_hcw_dynamics_with_logging.csv
.github/: pull_request_template.md
data/2025-02-23/: 2025-02-23_pair_state_simulation_log.csv  2025-02-23_simulation_log.csv
src/: domain.rs  factory.rs  infrastructure.rs  lib.rs  main.rs  repositry.rs  settings.rs  tests.rs
src/application/controller/: controller.rs
src/application/simulator/: simulator.rs
src/domain/: controller.rs  cost.rs  differentiable.rs  disturbance.rs  dynamics.rs  force.rs  math.rs  mod.rs  state.rs
src/domain/controller/: controller_trait.rs  mode_controller.rs  mode_optimizer.rs  mode_optimizer_.rs
src/domain/cost/: cost_trait.rs  quadric_cost.rs
src/domain/differentiable/: differentiable_trait.rs
src/domain/disturbance/: air_drag_disturbance.rs  disturbance_trait.rs  j2_disturbance.rs
src/domain/dynamics/: dynamics_2body.rs  dynamics_2sat_2body.rs  dynamics_hcw.rs  dynamics_linear.rs  dynamics_trait.rs  propagator.rs
src/domain/force/: force_3d.rs  force_3d_ecef.rs  mod.rs  (+6 more)
src/factory/: initialization_wrapper.rs  simulator_factory.rs
src/infrastructure/: factory.rs  logger.rs  settings.rs
src/models/: state.rs
src/plots/: plot_common.py  plot_for_mode_optimizer.py
src/repositry/: logger.rs
src/settings/: constants.rs  simulation_config.rs
src/tests/: mode_scheduler_test.rs  mode_scheduler_test2.rs  pair_simulator_factory_tests.rs  pair_simulator_tests.rs  simulator_log_test.rs  single_sat_simulator_tests.rs  state_vector_tests.rs
(+47 files in other folders)
