[package]
name = "Rust_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
csv = "1.3.1"
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17", features = ["openblas-static"] }
ndarray-inverse = "0.1.9"
serde = "1.0.218"
statrs = "0.18.0"

[lib]
name = "satellite_simulator"
path = "src/lib.rs"

[features]
default = ['pair']
pair = []
hcw = []
euler = []
