[project]
name = "rust-controller"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "michinarikake", email = "" }
]
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rust_controller"]
